--- a/public/shop.html
+++ b/public/shop.html
@@ -548,7 +548,7 @@
                         </div>
 
                         <button class="btn btn-primary w-100 py-3 fw-bold"
-                            onclick="proceedToCheckout()">ดำเนินการต่อ</button>
+                            disabled>ไม่สามารถสั่งซื้อได้</button>
                     </div>
                 </div>
             </div>
